--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:13:45 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:14:28 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -348,22 +348,6 @@ E thru 6</td>
 E thru 5</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler(W) -3
-Not started</td>
-      <td>Corey Conners -2
-E thru 11</td>
-      <td>Patrick Cantlay -1
-+1 thru 6</td>
-      <td>Rory McIlroy E
--1 thru 4</td>
-      <td class="greyout leftborder">Jon Rahm +1
--1 thru 6</td>
-      <td class="greyout">Robert MacIntyre +2
-+1 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Ron Harrington</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith -4
@@ -444,6 +428,22 @@ E thru 11</td>
 +3 thru 7</td>
     </tr>
     <tr>
+      <td class="bigbold">Roy Jeffrey B</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler(W) -3
+Not started</td>
+      <td>Corey Conners -2
+E thru 11</td>
+      <td>Patrick Cantlay -1
++1 thru 6</td>
+      <td>Robert MacIntyre +1
+E thru 13</td>
+      <td class="greyout leftborder">Rory McIlroy +1
+E thru 5</td>
+      <td class="greyout">Jon Rahm +1
+-1 thru 6</td>
+    </tr>
+    <tr>
       <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -4
@@ -492,22 +492,6 @@ Not started</td>
 +3 thru 5</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Tiger Woods -1
-Not started</td>
-      <td>Rory McIlroy(W) E
--1 thru 4</td>
-      <td>Hideki Matsuyama E
-Not started</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 5</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -4
@@ -524,36 +508,20 @@ E thru 5</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -4
 Not started</td>
-      <td>Bubba Watson -1
--2 thru 9</td>
-      <td>Rory McIlroy E
--1 thru 4</td>
-      <td>Jon Rahm(W) +1
--1 thru 6</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 6</td>
-      <td class="greyout">Viktor Hovland +3
-+3 thru 5</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">-3</td>
-      <td>Dustin Johnson -3
-E thru 7</td>
-      <td>Patrick Cantlay -1
-+1 thru 6</td>
-      <td>Rory McIlroy(W) E
--1 thru 4</td>
-      <td>Jon Rahm +1
--1 thru 6</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 6</td>
-      <td class="greyout">Viktor Hovland +3
-+3 thru 5</td>
+      <td>Tiger Woods -1
+Not started</td>
+      <td>Hideki Matsuyama E
+Not started</td>
+      <td>Rory McIlroy(W) +1
+E thru 5</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 5</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
@@ -588,6 +556,22 @@ E thru 5</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Bubba Watson -1
+-2 thru 9</td>
+      <td>Jon Rahm(W) +1
+-1 thru 6</td>
+      <td>Rory McIlroy +1
+E thru 5</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 6</td>
+      <td class="greyout">Viktor Hovland +3
++3 thru 5</td>
+    </tr>
+    <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">-3</td>
       <td>Dustin Johnson(W) -3
@@ -620,18 +604,18 @@ E thru 5</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Grace</td>
+      <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">-2</td>
-      <td>Corey Conners -2
-E thru 11</td>
-      <td>Will Zalatoris -1
-E thru 6</td>
-      <td>Rory McIlroy E
--1 thru 4</td>
-      <td>Collin Morikawa +1
+      <td>Dustin Johnson -3
 E thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele(W) +3
-+1 thru 5</td>
+      <td>Patrick Cantlay -1
++1 thru 6</td>
+      <td>Rory McIlroy(W) +1
+E thru 5</td>
+      <td>Jon Rahm +1
+-1 thru 6</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 6</td>
       <td class="greyout">Viktor Hovland +3
 +3 thru 5</td>
     </tr>
@@ -649,22 +633,6 @@ E thru 11</td>
       <td class="greyout leftborder">Xander Schauffele +3
 +1 thru 5</td>
       <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">-2</td>
-      <td>Corey Conners -2
-E thru 11</td>
-      <td>Will Zalatoris -1
-E thru 6</td>
-      <td>Rory McIlroy E
--1 thru 4</td>
-      <td>Jon Rahm +1
--1 thru 6</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 5</td>
-      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -716,51 +684,51 @@ Not started</td>
 +3 thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -1
-+1 thru 6</td>
-      <td>Rory McIlroy E
--1 thru 4</td>
-      <td>Viktor Hovland +3
-+3 thru 5</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 5</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners(W) -2
 E thru 11</td>
       <td>Daniel Berger -1
 Not started</td>
+      <td>Robert MacIntyre +1
+E thru 13</td>
       <td>Collin Morikawa +1
 E thru 7</td>
-      <td>Jon Rahm +1
+      <td class="greyout leftborder">Jon Rahm +1
 -1 thru 6</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td class="greyout">Jordan Spieth +1
 -1 thru 6</td>
-      <td class="greyout">Robert MacIntyre +2
-+1 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">Grace</td>
       <td class="bigbold">-1</td>
-      <td>Tiger Woods(W) -1
-Not started</td>
+      <td>Corey Conners -2
+E thru 11</td>
       <td>Will Zalatoris -1
 E thru 6</td>
-      <td>Rory McIlroy E
--1 thru 4</td>
+      <td>Rory McIlroy +1
+E thru 5</td>
       <td>Collin Morikawa +1
 E thru 7</td>
-      <td class="greyout leftborder">Viktor Hovland +3
+      <td class="greyout leftborder">Xander Schauffele(W) +3
++1 thru 5</td>
+      <td class="greyout">Viktor Hovland +3
 +3 thru 5</td>
-      <td class="greyout">Justin Thomas +4
+    </tr>
+    <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">-1</td>
+      <td>Corey Conners -2
+E thru 11</td>
+      <td>Will Zalatoris -1
+E thru 6</td>
+      <td>Rory McIlroy +1
+E thru 5</td>
+      <td>Jon Rahm +1
+-1 thru 6</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 5</td>
+      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -776,6 +744,22 @@ Not started</td>
 +3 thru 5</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 5</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -1
++1 thru 6</td>
+      <td>Rory McIlroy +1
+E thru 5</td>
+      <td>Viktor Hovland +3
++3 thru 5</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 5</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -812,18 +796,18 @@ E thru 5</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">0</td>
-      <td>Corey Conners -2
-E thru 11</td>
-      <td>Rory McIlroy E
--1 thru 4</td>
-      <td>Jon Rahm(W) +1
--1 thru 6</td>
-      <td>Jordan Spieth +1
--1 thru 6</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 5</td>
+      <td>Tiger Woods(W) -1
+Not started</td>
+      <td>Will Zalatoris -1
+E thru 6</td>
+      <td>Rory McIlroy +1
+E thru 5</td>
+      <td>Collin Morikawa +1
+E thru 7</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 5</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -876,20 +860,20 @@ E thru 5</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">1</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Rory McIlroy E
--1 thru 4</td>
+      <td>Corey Conners -2
+E thru 11</td>
       <td>Jon Rahm(W) +1
 -1 thru 6</td>
-      <td>Viktor Hovland +3
-+3 thru 5</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td>Rory McIlroy +1
 E thru 5</td>
-      <td class="greyout">Xander Schauffele +3
+      <td>Jordan Spieth +1
+-1 thru 6</td>
+      <td class="greyout leftborder">Xander Schauffele +3
 +1 thru 5</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -924,6 +908,22 @@ E thru 5</td>
 +1 thru 5</td>
     </tr>
     <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">2</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 6</td>
+      <td>Rory McIlroy +1
+E thru 5</td>
+      <td>Viktor Hovland +3
++3 thru 5</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 5</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 5</td>
+    </tr>
+    <tr>
       <td class="bigbold">Wylie</td>
       <td class="bigbold">2</td>
       <td>Scottie Scheffler -3
@@ -938,54 +938,6 @@ E thru 5</td>
 Not started</td>
       <td class="greyout">Louis Oosthuizen +4
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">3</td>
-      <td>Tiger Woods -1
-Not started</td>
-      <td>Rory McIlroy E
--1 thru 4</td>
-      <td>Collin Morikawa(W) +1
-E thru 7</td>
-      <td>Viktor Hovland +3
-+3 thru 5</td>
-      <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
-      <td class="greyout">Gary Woodland +7
-+4 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">3</td>
-      <td>Patrick Cantlay(W) -1
-+1 thru 6</td>
-      <td>Rory McIlroy E
--1 thru 4</td>
-      <td>Jon Rahm +1
--1 thru 6</td>
-      <td>Brooks Koepka +3
-E thru 5</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 5</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">3</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Rory McIlroy E
--1 thru 4</td>
-      <td>Xander Schauffele +3
-+1 thru 5</td>
-      <td>Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout leftborder">Sam Burns +6
-+3 thru 7</td>
-      <td class="greyout">Justin Rose +9
-+5 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
@@ -1036,6 +988,22 @@ E thru 7</td>
 E thru 5</td>
     </tr>
     <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">4</td>
+      <td>Tiger Woods -1
+Not started</td>
+      <td>Collin Morikawa(W) +1
+E thru 7</td>
+      <td>Rory McIlroy +1
+E thru 5</td>
+      <td>Viktor Hovland +3
++3 thru 5</td>
+      <td class="greyout leftborder">Justin Thomas +4
+Not started</td>
+      <td class="greyout">Gary Woodland +7
++4 thru 12</td>
+    </tr>
+    <tr>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">4</td>
       <td>Will Zalatoris -1
@@ -1050,6 +1018,38 @@ E thru 6</td>
 E thru 5</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">4</td>
+      <td>Patrick Cantlay(W) -1
++1 thru 6</td>
+      <td>Rory McIlroy +1
+E thru 5</td>
+      <td>Jon Rahm +1
+-1 thru 6</td>
+      <td>Brooks Koepka +3
+E thru 5</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 5</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">4</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Rory McIlroy +1
+E thru 5</td>
+      <td>Xander Schauffele +3
++1 thru 5</td>
+      <td>Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout leftborder">Sam Burns +6
++3 thru 7</td>
+      <td class="greyout">Justin Rose +9
++5 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
