--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:13:45 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:14:28 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,38 +172,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Patrick Cantlay -1
-+1 thru 6</td>
-      <td>Rory McIlroy E
--1 thru 4</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 5</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 5</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Joaquin Niemann -3
-Not started</td>
-      <td>Rory McIlroy E
--1 thru 4</td>
-      <td>Tommy Fleetwood(W) +3
-Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 5</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -4
@@ -217,6 +185,38 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 5</td>
       <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Patrick Cantlay -1
++1 thru 6</td>
+      <td>Collin Morikawa +1
+E thru 7</td>
+      <td>Rory McIlroy +1
+E thru 5</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 5</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 5</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Joaquin Niemann -3
+Not started</td>
+      <td>Rory McIlroy +1
+E thru 5</td>
+      <td>Tommy Fleetwood(W) +3
+Not started</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 5</td>
+      <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
@@ -239,7 +239,7 @@ Not started</td>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-2</td>
       <td>Sungjae Im -5
-E thru 8</td>
+E thru 9</td>
       <td>Patrick Cantlay -1
 +1 thru 6</td>
       <td>Collin Morikawa +1
@@ -328,8 +328,8 @@ E thru 7</td>
 -1 thru 6</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 6</td>
-      <td class="greyout">Robert MacIntyre +2
-+1 thru 12</td>
+      <td class="greyout">Robert MacIntyre +1
+E thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
