--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:20:13 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:20:56 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,13 +141,13 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-9</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
-      <td>Corey Conners -2
-E thru 11</td>
+      <td>Corey Conners -3
+-1 thru 12</td>
       <td>Jordan Spieth +1
 -1 thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +3
@@ -157,33 +157,33 @@ E thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-5</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay -1
 +1 thru 6</td>
-      <td>Will Zalatoris -1
-E thru 6</td>
       <td>Tony Finau -1
 Not started</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
       <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -4
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-3</td>
+      <td>Corey Conners -3
+-1 thru 12</td>
+      <td>Patrick Cantlay -1
++1 thru 6</td>
+      <td>Tyrrell Hatton E
+E thru 8</td>
+      <td>Jon Rahm +1
+-1 thru 7</td>
+      <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
-      <td>Will Zalatoris -1
-E thru 6</td>
-      <td>Matthew Fitzpatrick E
-+1 thru 5</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 5</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -220,19 +220,35 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-2</td>
-      <td>Corey Conners -2
-E thru 11</td>
-      <td>Patrick Cantlay -1
-+1 thru 6</td>
-      <td>Tyrrell Hatton E
-E thru 8</td>
-      <td>Jon Rahm +1
--1 thru 7</td>
-      <td class="greyout leftborder">Shane Lowry +1
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -4
 Not started</td>
+      <td>Matthew Fitzpatrick E
++1 thru 5</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 5</td>
       <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 12</td>
+      <td>Jordan Spieth +1
+-1 thru 6</td>
+      <td>Viktor Hovland +3
++3 thru 6</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 6</td>
+      <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
@@ -252,36 +268,20 @@ E thru 5</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-2</td>
-      <td>Scottie Scheffler(W) -3
-Not started</td>
-      <td>Will Zalatoris -1
-E thru 6</td>
-      <td>Jon Rahm +1
--1 thru 7</td>
-      <td>Jordan Spieth +1
--1 thru 6</td>
-      <td class="greyout leftborder">Shane Lowry +1
-Not started</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 5</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-2</td>
-      <td>Will Zalatoris -1
-E thru 6</td>
-      <td>Tony Finau -1
-Not started</td>
+      <td>Corey Conners(W) -3
+-1 thru 12</td>
       <td>Daniel Berger -1
 Not started</td>
       <td>Collin Morikawa +1
 E thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 5</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
+      <td>Jon Rahm +1
+-1 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 6</td>
+      <td class="greyout">Robert MacIntyre +1
+E thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -300,36 +300,36 @@ E thru 7</td>
 E thru 5</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -2
-E thru 11</td>
-      <td>Jordan Spieth +1
--1 thru 6</td>
-      <td>Viktor Hovland +3
-+3 thru 6</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 6</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-1</td>
-      <td>Corey Conners(W) -2
-E thru 11</td>
-      <td>Daniel Berger -1
+      <td>Scottie Scheffler(W) -3
 Not started</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
       <td>Jon Rahm +1
 -1 thru 7</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td>Jordan Spieth +1
 -1 thru 6</td>
-      <td class="greyout">Robert MacIntyre +1
-E thru 13</td>
+      <td class="greyout leftborder">Shane Lowry +1
+Not started</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 5</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-1</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
+      <td>Collin Morikawa +1
+E thru 7</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 5</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -349,11 +349,11 @@ E thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
       <td>Dustin Johnson -3
 E thru 7</td>
-      <td>Corey Conners -2
-E thru 11</td>
+      <td>Corey Conners -3
+-1 thru 12</td>
       <td>Xander Schauffele(W) +3
 +1 thru 6</td>
       <td>Justin Thomas +4
@@ -365,9 +365,9 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">3</td>
-      <td>Corey Conners -2
-E thru 11</td>
+      <td class="bigbold">2</td>
+      <td>Corey Conners -3
+-1 thru 12</td>
       <td>Jon Rahm +1
 -1 thru 7</td>
       <td>Jordan Spieth +1
