--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:24:31 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:25:14 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -201,7 +201,7 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 6</td>
       <td class="greyout">Russell Henley +4
-+3 thru 11</td>
++3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
@@ -220,6 +220,22 @@ Not started</td>
 +3 thru 6</td>
     </tr>
     <tr>
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-9</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -1
++1 thru 7</td>
+      <td>Matthew Fitzpatrick -1
+E thru 6</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 6</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 6</td>
+    </tr>
+    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-8</td>
       <td>Cameron Smith -4
@@ -234,22 +250,6 @@ Not started</td>
 -1 thru 7</td>
       <td class="greyout">Viktor Hovland +3
 +3 thru 6</td>
-    </tr>
-    <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -1
-+1 thru 7</td>
-      <td>Matthew Fitzpatrick E
-+1 thru 5</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 6</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
@@ -492,6 +492,38 @@ E thru 6</td>
 +4 thru 7</td>
     </tr>
     <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Matthew Fitzpatrick -1
+E thru 6</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 6</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">-4</td>
+      <td>Dustin Johnson(W) -3
+E thru 7</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Matthew Fitzpatrick -1
+E thru 6</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 6</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">-4</td>
       <td>Corey Conners -3
@@ -554,38 +586,6 @@ Not started</td>
 +1 thru 6</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Matthew Fitzpatrick E
-+1 thru 5</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 6</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">-3</td>
-      <td>Dustin Johnson(W) -3
-E thru 7</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Matthew Fitzpatrick E
-+1 thru 5</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 6</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -963,7 +963,7 @@ E thru 7</td>
       <td>Jon Rahm +1
 -1 thru 7</td>
       <td>Patrick Reed +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Jordan Spieth +1
 -1 thru 6</td>
       <td class="greyout leftborder">Viktor Hovland(W) +3
