--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:24:31 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:25:14 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -168,6 +168,22 @@ Not started</td>
 +1 thru 7</td>
       <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Matthew Fitzpatrick -1
+E thru 6</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 6</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -217,22 +233,6 @@ Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
 +3 thru 6</td>
       <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Matthew Fitzpatrick E
-+1 thru 5</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 6</td>
-      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -359,7 +359,7 @@ E thru 7</td>
       <td>Justin Thomas +4
 Not started</td>
       <td class="greyout leftborder">Russell Henley +4
-+3 thru 11</td>
++3 thru 12</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -387,7 +387,7 @@ Missed Cut</td>
       <td>Collin Morikawa +1
 E thru 7</td>
       <td>Patrick Reed +1
--1 thru 10</td>
+-1 thru 11</td>
       <td>Viktor Hovland(W) +3
 +3 thru 6</td>
       <td class="greyout leftborder">Brooks Koepka +3
